re PR c/53702 (ICE with -Wall and nested functions and unused typedef)

PR c/53702

	* c-decl.c (c_push_function_context): Restore the behavior to reuse
	the language function allocated for -Wunused-local-typedefs.
	(c_pop_function_context): If necessary, clear the language function
	created in c_push_function_context.  Always clear out the
	x_cur_stmt_list field of the restored language function.

testsuite/
	* gcc.dg/Wunused-local-typedefs.c: New testcase.

From-SVN: r188860